--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,17 @@ code {
     monospace;
 }
 
+img {
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 600px;
+  object-fit: cover;
+  object-position: center center;
+  opacity: 1;
+  transition: none 0s ease 0s;
+}
+
 .accordion {
   list-style-type: none;
   width: 500px;
