feat/onClick_menu_appears

--- a/src/components/Hamburger/Hamburger.css
+++ b/src/components/Hamburger/Hamburger.css
@@ -1,4 +1,4 @@
-svg {
+/* svg {
   height: 40px;
   width: 40px;
 }
@@ -10,4 +10,4 @@ button {
   top: 50%;
   right: 25px;
   padding-left: 20px;
-}
+} */
