--- a/src/components/Accordion/Accordion.css
+++ b/src/components/Accordion/Accordion.css
@@ -15,3 +15,12 @@
 svg {
   height: 30px;
 }
+
+.accordion {
+  list-style-type: none;
+  width: 500px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  margin: auto;
+}
