--- a/src/components/ScrollMenu/ScrollMenu.css
+++ b/src/components/ScrollMenu/ScrollMenu.css
@@ -1,6 +1,5 @@
 .scroll-menu {
-  padding: 50px 0;
-  position: relative;
+  padding: 100px 0;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -8,14 +7,23 @@
 
 .menu-item {
   width: 250px;
+  height: auto;
   display: block;
   padding: 5px;
   cursor: pointer;
 }
 
-/* .menu-item:hover {
-  transform: scale(1.1);
-} */
+.container {
+  position: relative;
+  text-align: center;
+  color: black;
+}
+
+.container p {
+  position: absolute;
+  bottom: 8px;
+  right: 16px;
+}
 
 .slider {
   width: 100%;
