--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,38 +1,93 @@
 .navigation {
-  height: 60px;
+  height: 13.0667vw;
   width: 100%;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  position: fixed;
-  padding: 0.5rem 0rem;
+  position: relative;
+  padding: 0;
   background-color: #fff;
   color: black;
   box-shadow: 0 2px 2px 2px rgba(9, 9, 9, 0.23);
   z-index: 9999;
 }
 
-svg {
-  height: 40px;
-  width: 40px;
-  padding-right: 20px;
-}
-
 .logo {
-  width: 140px;
+ display: flex;
+ text-decoration: none;
+ align-items: center;
+ z-index: 3;
 }
 
-.nav_left {
-  display: flex;
-  width: 200px;
+.logo svg {
+  height: 4.8vw;
+  padding-left: 0.8vw
+}
+
+.icon-button {
+  height: 4.8vw;
+  display:flex;
   justify-content: space-between;
+  flex-direction: column;
+  margin: 4vw
 }
 
-button {
-  border: 0;
-  background-color: white;
-  cursor: pointer;
-  top: 50%;
-  right: 25px;
-  padding-left: 20px;
+.icon-button div:first-child {
+  transform:translate3d(0px, 2vw, 0px) rotate(45deg)
+}
+
+.icon-button div:nth-child(2) {
+  display:none
+}
+
+.icon-button div:nth-child(3) {
+  transform:translate3d(0px, -2.3vw, 0px) rotate(-45deg)
+}
+
+.icon-button div {
+  height: 0.5vw;
+  width: 6vw;
+}
+
+.navigation .color-bg {
+  background: black;
+}
+
+.search-button {
+  margin-right: 3.6vw;
+}
+
+.search-button svg {
+  height: 6.4vw;
+  width: 6.4vw
+}
+
+.cart {
+  position:relative;
+  margin-right: 4vw;
+}
+
+.cart svg {
+  height: 6vw;
+  width: 6vw
+}
+
+.cart-number {
+  font-size: 2.66667vw;
+  position: absolute;
+  top: 60%;
+  left: 50%;
+  transform: translate3d(-50%, -60%, 0px);
+}
+
+.icon-button-close {
+  height: 4.8vw;
+  display:flex;
+  justify-content: space-between;
+  flex-direction: column;
+  margin: 4vw
+}
+.icon-button-close div {
+  height: 0.5vw;
+  width: 6vw
 }
