--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -8,8 +8,9 @@
   padding: 0;
   background-color: #fff;
   color: black;
-  box-shadow: 0 2px 2px 2px rgba(9, 9, 9, 0.23);
   z-index: 9999;
+  border-bottom: 1px solid rgb(229, 229, 229);
+  vertical-align: baseline;
 }
 
 .logo {
@@ -17,6 +18,7 @@
  text-decoration: none;
  align-items: center;
  z-index: 3;
+ margin-right: 28.5vw
 }
 
 .logo svg {
