--- a/src/components/Accordion/Accordion.css
+++ b/src/components/Accordion/Accordion.css
@@ -7,7 +7,7 @@
 
 .accordion-title {
   display: flex;
-  width: 500px;
+  width: 70vw;
   justify-content: space-between;
   cursor: pointer;
 }
@@ -16,11 +16,15 @@ svg {
   height: 30px;
 }
 
-.accordion {
+ul {
   list-style-type: none;
-  width: 500px;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  margin: auto;
+  padding-inline-start: 0px
+}
+
+.accordion-item:first-of-type {
+  border-top: 1px solid rgb(224, 222, 223);
+}
+
+.accordion-item {
+  border-bottom: 1px solid rgb(229, 229, 229);
 }
