--- a/src/components/ScrollMenu/ScrollMenu.css
+++ b/src/components/ScrollMenu/ScrollMenu.css
@@ -1,16 +1,22 @@
 .scroll-menu {
-  /* padding: 100px 0; */
   display: flex;
   flex-direction: row;
   align-items: center;
 }
 
 .menu-item {
-  width: 250px;
-  height: auto;
+  height: 53.333vw;
   display: block;
   padding: 5px;
   cursor: pointer;
+  /* background: linear-gradient(rgba(18 18 18 0), rgba(18 18 18 0), rgba(18 18 18 0.4)); */
+}
+
+.container::after {
+  position: absolute;
+  left: 0; top: 0;
+  width: 100%; height: 100%;
+  background: linear-gradient(rgba(18 18 18 0), rgba(18 18 18 0), rgba(18 18 18 0.4));
 }
 
 .container {
@@ -25,69 +31,15 @@
   right: 16px;
 }
 
-.carousel {
-  position:relative
-}
-
-.carousel .swiper-container {
-  padding-right: 4vw;
-}
-
-.swiper-container {
-  list-style: none;
-  margin:auto;
-  overflow: hidden;
-  padding: 0;
-  position: relative;
-  z-index: 1
-}
-
-.swiper-wrapper {
-  box-sizing: content-box;
-  display: flex;
-  height: 100%;
-  position: relative;
+.slider {
   width: 100%;
-  z-index: 1;
-transition-duration: 0ms;
-transform: translate3d(0px, 0px, 0px);
+  height: 100%;
+  display: flex;
+  overflow-x: scroll;
+  white-space: nowrap;
+  scroll-behavior: smooth;
 }
 
-.swiper-slide {
-text-decoration: none;
-display: block;
-box-sizing: border-box;
-margin-top: 4vw;
-margin-bottom: 4vw;
-padding-right: 4vw;
-padding-left: 4vw;
-width: 45.75vw !important
-}
-
-
-.carousel::-webkit-scrollbar {
+.slider::-webkit-scrollbar {
   display: none;
-}
-
-.arrow-button {
-  background-color: white;
-  padding: 0 0 0 10px;
-  opacity: 50%;
-  border: 0;
-  cursor: pointer;
-  top: 50%;
-  right: 25px;
-}
-
-svg {
-  padding: 0;
-}
-
-button {
-  border: 0;
-  background-color:transparent;
-  cursor: pointer;
-  margin: 0;
-  outline: 0;
-  padding: 0
 }
