--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@ code {
     monospace;
 }
 
-img {
+/* img {
   top: 0px;
   left: 0px;
   width: 100%;
@@ -21,4 +21,13 @@ img {
   object-position: center center;
   opacity: 1;
   transition: none 0s ease 0s;
+} */
+
+button {
+  border: 0;
+  background-color:transparent;
+  cursor: pointer;
+  margin: 0;
+  outline: 0;
+  padding: 0
 }
