--- a/src/components/Accordion/Accordion.css
+++ b/src/components/Accordion/Accordion.css
@@ -1,41 +1,42 @@
 .sub-menu {
-  display: flex;
-  width: 100vh;
-  width: 500px;
-  justify-content: space-between;
+    display: flex;
+    width: 68vw;
+    justify-content: space-between;
+    font-family: MaisonNeueMedium, Arial, sans-serif;
+    margin: auto;
 }
 
 .accordion-title {
-  display: flex;
-  width: 80vw;
-  justify-content: space-between;
-  cursor: pointer;
-  margin: auto;
+    display: flex;
+    width: 80vw;
+    justify-content: space-between;
+    cursor: pointer;
+    margin: auto;
 }
 
 .accordion-title font {
-text-transform: uppercase;
-font-family: MaisonNeueBold, Arial, sans-serif;
-font-size: 4vw;
-padding: 6vw;
-position:relative;
-text-align: left;
-letter-spacing: 0.15em;
+    text-transform: uppercase;
+    font-family: MaisonNeueBold, Arial, sans-serif;
+    font-size: 4vw;
+    padding: 6vw;
+    position: relative;
+    text-align: left;
+    letter-spacing: 0.15em;
 }
 
 svg {
-  height: 30px;
+    height: 30px;
 }
 
 ul {
-  list-style-type: none;
-  padding-inline-start: 0px
+    list-style-type: none;
+    padding-inline-start: 0px
 }
 
 .accordion-item:first-of-type {
-  border-top: 2px solid rgb(224, 222, 223);
+    border-top: 1px solid rgb(224, 222, 223);
 }
 
 .accordion-item {
-  border-bottom: 1px solid rgb(229, 229, 229);
+    border-bottom: 1px solid rgb(229, 229, 229);
 }
