--- a/src/components/ScrollMenu/ScrollMenu.css
+++ b/src/components/ScrollMenu/ScrollMenu.css
@@ -1,45 +1,78 @@
 .scroll-menu {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
 }
 
 .menu-item {
-  height: 53.333vw;
-  display: block;
-  padding: 5px;
-  cursor: pointer;
-  /* background: linear-gradient(rgba(18 18 18 0), rgba(18 18 18 0), rgba(18 18 18 0.4)); */
+    height: 53.333vw;
+    display: block;
+    padding: 5px;
+    cursor: pointer;
 }
 
-.container::after {
-  position: absolute;
-  left: 0; top: 0;
-  width: 100%; height: 100%;
-  background: linear-gradient(rgba(18 18 18 0), rgba(18 18 18 0), rgba(18 18 18 0.4));
+.gradient {
+    position: relative;
+    height: 53.333vw;
+    inset: 0px;
+    z-index: 9;
+}
+
+.gradient::before {
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    display: inline-block;
+    background: -webkit-linear-gradient(top, rgba(18, 18, 18, 0) 50%, rgba(18, 18, 18, 0) 0%, rgba(18, 18, 18, 0.4) 100%);
+}
+
+.gradient img {
+    display: block;
+    padding: 0
+}
+
+.gradient h2 {
+    position: absolute;
+    bottom: 0.4vw;
+    left: 4vw;
+    font-size: 4vw;
+    color: white;
+    letter-spacing: 0.025em;
+    font-weight: normal;
+    font-family: MaisonNeueMedium, Arial, sans-serif;
+    z-index: 10;
 }
 
 .container {
-  position: relative;
-  text-align: center;
-  color: black;
+    position: relative;
+    display: inline-block;
+    text-align: center;
+    color: black;
+    padding-right: 4vw;
+    margin-top: 4vw;
+    margin-bottom: 4vw;
 }
 
-.container p {
-  position: absolute;
-  bottom: 8px;
-  right: 16px;
+.container:first-of-type {
+    position: relative;
+    display: inline-block;
+    text-align: center;
+    color: black;
+    padding-left: 4vw;
 }
 
 .slider {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  overflow-x: scroll;
-  white-space: nowrap;
-  scroll-behavior: smooth;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    overflow-x: scroll;
+    white-space: nowrap;
+    scroll-behavior: smooth;
 }
 
 .slider::-webkit-scrollbar {
-  display: none;
+    display: none;
 }
