--- a/src/index.css
+++ b/src/index.css
@@ -1,33 +1,19 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+    font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
 }
 
-/* img {
-  top: 0px;
-  left: 0px;
-  width: 100%;
-  height: 600px;
-  object-fit: cover;
-  object-position: center center;
-  opacity: 1;
-  transition: none 0s ease 0s;
-} */
-
 button {
-  border: 0;
-  background-color:transparent;
-  cursor: pointer;
-  margin: 0;
-  outline: 0;
-  padding: 0
+    border: 0;
+    background-color: transparent;
+    cursor: pointer;
+    margin: 0;
+    outline: 0;
+    padding: 0
 }
